<resources>
    <string name="app_name">contact_ChetnaSharma_C0776253</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact number</string>
    <string name="address">Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_list">Contact List</string>
    <string name="title_activity_contact_drawer">ContactDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>